results page completed

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -448,7 +448,7 @@ li span {
 }
 
 .ad-horiz-img-container {
-  background-image: url('images.icons/bg-ad-3.png');
+  background-image: url('bg-ad-3.png');
   background-repeat: no-repeat;
   background-size: cover;
   display: block;
@@ -457,7 +457,7 @@ li span {
 }
 
 .ad-horiz-img-2 {
-  background-image: url('images.icons/bg-ad-2.png');
+  background-image: url('bg-ad-2.png');
 }
 
 .ad-horiz-text-container {
@@ -651,7 +651,7 @@ li span {
 }
 
 .search-results-img-container {
-  background-image: url('images.icons/article-1.png');
+  background-image: url('article-1.png');
   background-repeat: no-repeat;
   background-size: cover;
   display: inline-block;
@@ -661,11 +661,11 @@ li span {
 }
 
 .article-2 {
-  background-image: url('images.icons/article-2.png');
+  background-image: url('article-2.png');
 }
 
 .article-3 {
-  background-image: url('images.icons/article-3.png');
+  background-image: url('article-3.png');
 }
 
 .search-results-img-container button {
