--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -1,3 +1,134 @@
-<h1>Pages#results</h1>
-<p>Find me in app/views/pages/results.html.erb</p>
-<h2><%= @message %></h2>
+<!-- <h1>Pages#results</h1>
+<p>Find me in app/views/pages/results.html.erb</p> -->
+
+<header>
+  <div>
+    <%= image_tag("icon-logo-header.png", height:"23", class:"head-logo") %>
+    Orange Review
+  </div>
+  <nav>
+    <a href="#">Topics</a>
+    <a href="#">Tags</a>
+    <%= image_tag("icon-search-header.png", height:"14", class:"head-magnify-orange") %>
+  </nav>
+</header>
+<section class="head-under-main-hero3">
+  <div>
+    <div class="head-under-main-txt">
+      <h4>Orange Review - Edition 1</h4>
+      <h1>A Time Travel Postcard</h1>
+      <h6 class="date-comments">
+        Posted 19 May 2018
+        <a href="#">3 Comments</a>
+      </h6>
+      <div>
+        <button class="button-lg-txt">Read More</button>
+      </div>
+  </div>
+</section>
+<section class="search-results">
+  <div class="search-results-container-centered">
+    <div class="search-results-img-container">
+      <button class="button-opaque-lg-txt">Read More
+      </button>
+    </div>
+    <div class="search-results-txt">
+      <h6 class="date-comments">
+          19 May 2018
+        <a href="#">15 Comments</a>
+      </h6>
+      <h2>New Ideas for a Low Cost Vacation on water
+      </h2>
+      <div class="button-hash-container">
+        <button class="button-hash">#Travel</button>
+        <button class="button-hash">#Personal</button>
+        <button class="button-hash">#Food</button>
+        <button class="button-hash">#TagsForLikes</button>
+      </div>
+    </div>
+  </div>
+</section>
+<div class="ad-horiz-background">
+  <div class="ad-horiz-container-centered">
+    <section class="ad-horiz-img-container">
+      <div class="ad-horiz-text-container">
+        <p class="ad-horiz">Top Best List of Restaurants at Your Destination
+        </p>
+        <button class="button-opaque">
+        Learn More
+        </button>
+      </div>
+    </section>
+  </div>
+</div>
+<section class="search-results">
+  <div class="search-results-container-centered">
+    <div class="search-results-img-container article-2">
+      <button class="button-opaque-lg-txt">Read More
+      </button>
+    </div>
+    <div class="search-results-txt">
+      <h6 class="date-comments">
+          20 May 2018
+        <a href="#">11 Comments</a>
+      </h6>
+      <h2>maui by air the best way around the island
+      </h2>
+      <div class="button-hash-container">
+        <button class="button-hash">#Travel</button>
+        <button class="button-hash">#Personal</button>
+        <button class="button-hash">#Food</button>
+        <button class="button-hash">#TagsForLikes</button>
+      </div>
+    </div>
+  </div>
+</section>
+<div class="search-break">
+</div>
+<section class="search-results">
+  <div class="search-results-container-centered">
+    <div class="search-results-img-container article-3">
+      <button class="button-opaque-lg-txt">Read More
+      </button>
+    </div>
+    <div class="search-results-txt">
+      <h6 class="date-comments">
+          31 May 2018
+        <a href="#">11 Comments</a>
+      </h6>
+      <h2>useful travel health medical information
+      </h2>
+      <div class="button-hash-container">
+        <button class="button-hash">#Travel</button>
+        <button class="button-hash">#Personal</button>
+        <button class="button-hash">#Food</button>
+        <button class="button-hash">#TagsForLikes</button>
+      </div>
+    </div>
+  </div>
+</section>
+<div class="ad-horiz-background">
+  <div class="ad-horiz-container-centered">
+    <section class="ad-horiz-img-container ad-horiz-img-2">
+      <div class="ad-horiz-text-container">
+        <p class="ad-horiz">Top Best List of Restaurants at Your Destination
+        </p>
+        <button class="button-opaque ">
+        Learn More
+        </button>
+      </div>
+    </section>
+  </div>
+</div>
+<footer>
+  <div>
+    <%= image_tag("icon-logo-header.png", height:"23", class:"head-logo") %>
+    Orange Review
+  </div>
+  <p class="footer-tagline">
+    The Best Travel Tips
+  </p>
+  <h6 class="copyright">
+    Copyright 2018, Build Carolina.
+  </h6>
+</footer>
