--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,31 @@
   </head>
 
   <body>
+    <header>
+      <div>
+        <%= image_tag("icon-logo-header.png", height:'23', class: "head-logo") %>
+        Orange Review
+      </div>
+      <nav>
+        <a href="#">Topics</a>
+        <a href="#">Tags</a>
+        <%= image_tag("icon-search-header.png", height:'14', class: "head-magnify-orange") %>
+      </nav>
+    </header>
+
     <%= yield %>
+
+    <footer>
+      <div>
+        <%= image_tag("icon-logo-header.png", height:'23', class: "head-logo") %>
+        Orange Review
+      </div>
+      <p class="footer-tagline">
+        The Best Travel Tips
+      </p>
+      <h6 class="copyright">
+        Copyright 2018, Build Carolina.
+      </h6>
+    </footer>
   </body>
 </html>
