--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+SC:200,300,400,500,700,800|Alegreya+Sans:300,400,500,700,800|Alegreya:400,500,700,800" rel="stylesheet">
   </head>
 
   <body>
