Changed header search icon background for search view

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -230,7 +230,7 @@ figcaption {
 
 /*IMAGES-ICONS*/
 
-.head-magnify-orange {
+.head-magnify {
   background-color: #f99c35;
   border-radius: 25px;
   border: 8px solid #f99c35;
@@ -239,13 +239,9 @@ figcaption {
   top: 7px;
 }
 
-.head-magnify-black {
+.black {
   background-color: #000000;
-  border-radius: 25px;
   border: 8px solid #000000;
-  position: relative;
-  right: 20px;
-  top: 7px;
 }
 
 .head-logo {
