--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,10 @@
       <nav>
         <a href="#">Topics</a>
         <a href="#">Tags</a>
-        <%= image_tag("icon-search-header.png", height:'14', class: "head-magnify-orange") %>
+        <%= image_tag("icon-search-header.png", {
+          height:'14', 
+          class: "head-magnify #{'black' if @dark_theme}"
+        }) %>
       </nav>
     </header>
 
