--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <header>
       <div>
         <%= image_tag("icon-logo-header.png", height:'23', class: "head-logo") %>
-        Orange Review
+        Blue Review
       </div>
       <nav>
         <a href="#">Topics</a>
