Displaying the post titles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
     <footer>
       <div>
         <%= image_tag("icon-logo-header.png", height:'23', class: "head-logo") %>
-        Orange Review
+        Blue Review
       </div>
       <p class="footer-tagline">
         The Best Travel Tips
