--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -1,7 +1,7 @@
 <section class="head-under-main-hero3">
   <div>
     <div class="head-under-main-txt">
-      <h4>Orange Review - Edition 1</h4>
+      <h4>Blue Review - Edition 1</h4>
       <h1>A Time Travel Postcard</h1>
       <h6 class="date-comments">
         Posted 19 May 2018
