--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,9 +12,34 @@
       </div>
   </div>
 </section>
+
 <section class="search-results">
-  <div class="search-results-container-centered">
-    <table>
+  <% @posts.each do |post| %>
+    <div class="search-results-container-centered">
+      <div class="search-results-img-container">
+        <button class="button-opaque-lg-txt">Read More
+        </button>
+      </div>
+      <div class="search-results-txt">
+        <h6 class="date-comments">
+            19 May 2018
+          <a href="#">15 Comments</a>
+        </h6>
+        <h2>
+          <%= link_to post.title, post_path(post) %>
+        </h2>
+        <div class="button-hash-container">
+          <button class="button-hash">#Travel</button>
+          <button class="button-hash">#Personal</button>
+          <button class="button-hash">#Food</button>
+          <button class="button-hash">#TagsForLikes</button>
+        </div>
+      </div>    
+    </div>
+  <% end %>
+</section>
+
+<table>
       <tr>
         <th>Post Title</th>
         <th>View Details</th>
@@ -28,5 +53,3 @@
         <% end %>
       </tbody>
     </table>
-  </div>
-</section>
